tests/paczka1/fuzzy1/97336651.err
Error in line 4: S219 S219 59,83
Error in line 1: S219 A319 69,7
Error in line 9: YRsgKtTw S219 29,7
Error in line 21: HWJVD9zbDv2 S219 97,0
Error in line 27: HWJVD9zbDv2 A319 32,2
Error in line 20: fsfUYH A626 64,9
